<?xml version="1.0"?>
<package>
  <name>tom_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and scripts needed to bring up the ROS nodes of TOM robot.</description>
  <maintainer email="dean@tum.de">Emmanuel Dean</maintainer>
  <license>Modified BSD</license>
  <author email="dean@tum.de">Emmanuel Dean</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tom_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  

</package>
