<?xml version="1.0"?>
<package>
  <name>tum_ics_msgs</name>
  <version>0.1.0</version>
  <description>
	messages for tum fiad demo
  </description>
  <author email="dean@tum.de">Emmanuel Dean</author>
  <author email="florian.bergner@tum.de">Florian Bergner</author>
  <maintainer email="dean@tum.de">Emmanuel Dean</maintainer>
  <maintainer email="florian.bergner@tum.de">Florian Bergner</maintainer>
  <license>BSD</license>
  
	<buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  

  <run_depend>message_runtime</run_depend>

	<run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
